# contacts-backend

./: .env.example  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/api/: nfc.py  profiles.py  users.py
app/core/: auth.py  config.py  crud.py  database.py  error_handling.py  security.py
app/models/: models.py
app/routers/: routers.py
app/schemas/: connection.py  nfc.py  user.py
app/services/: services.py
supabase/migrations/: 20240327_initial_schema.sql
